--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="navBar">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" height="64px">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img src="./pics/building-svgrepo-com.svg" style="filter: invert(1);" alt=""> Dream Estate</a>
+              <a class="navbar-brand Logo" href="./index.html"><img src="./pics/building-svgrepo-com.svg" style="filter: invert(1);" alt=""> Dream Estate</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
