--- a/CurrProject.html
+++ b/CurrProject.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="index2.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="media.css">
 
 </head>
 <body>
   <div class="navBar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" height="64px">
-        <div class="container-fluid">
+        <div class="container-fluid Logo">
           <a class="navbar-brand" href="./index.html"><img src="./pics/building-svgrepo-com.svg" style="filter: invert(1);" alt=""> Dream Estate</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
