--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="index2.css">
+    <link rel="stylesheet" href="media.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <style>
@@ -26,7 +27,7 @@
 <body>
   <div class="navBar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" height="64px">
-        <div class="container-fluid">
+        <div class="container-fluid Logo">
           <a class="navbar-brand" href="./index.html"><img src="./pics/building-svgrepo-com.svg" style="filter: invert(1);" alt=""> Dream Estate</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -93,10 +94,10 @@
                     <img src="./pics/WhatsApp Image 2022-04-05 at 7.47.53 PM (2).jpeg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./pics/WhatsApp Image 2022-04-05 at 7.47.53 PM (2).jpeg" class="d-block w-100" alt="...">
+                    <img src="./pics/carousel2.jpeg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./pics/WhatsApp Image 2022-04-05 at 7.47.53 PM (2).jpeg" class="d-block w-100" alt="...">
+                    <img src="./pics/carousel4.jpeg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
