--- a/benifits.html
+++ b/benifits.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="index2.css">
     <!-- Bootstrap Links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="media.css">
+
+
     <style>
         #img{
             width: 900px;
@@ -21,46 +24,45 @@
 </head>
 <body>
    
-    <div class="navBar">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" height="64px">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img src="./pics/building-svgrepo-com.svg" style="filter: invert(1);" alt=""> Dream Estate</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active mx-2 fw-bold" aria-current="page" href="./index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active mx-2 fw-bold" href="./project.html">Project</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active mx-2 fw-bold" href="./location.html">Location</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active mx-2 fw-bold" href="./about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active mx-2 fw-bold" href="./contact.html">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active mx-2 fw-bold" href="./development.html">Development</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active mx-2 fw-bold" href="./CurrProject.html">'Running Project'</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active mx-2 fw-bold" href="./benifits.html">Benifits</a>
-                  </li>
-                </ul>
-    
-              </div>
-            </div>
-          </nav>
-      </div>
-      
+  <div class="navBar">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" height="64px">
+        <div class="container-fluid Logo">
+          <a class="navbar-brand" href="./index.html"><img src="./pics/building-svgrepo-com.svg" style="filter: invert(1);" alt=""> Dream Estate</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active mx-2 fw-bold" aria-current="page" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active mx-2 fw-bold" href="./project.html">Project</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active mx-2 fw-bold" href="./location.html">Location</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active mx-2 fw-bold" href="./about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active mx-2 fw-bold" href="./contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active mx-2 fw-bold" href="./development.html">Development</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active mx-2 fw-bold" href="./CurrProject.html">'Running Project'</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active mx-2 fw-bold" href="./benifits.html">Benifits</a>
+              </li>
+            </ul>
+
+          </div>
+        </div>
+      </nav>
+  </div>
         <h1>80% to 90% Loan Avalilable</h1>
         <img src="./development pics/loan.jpeg" alt="">
         <img src="./development pics/chart.jpeg" id="img" alt="">
