--- a/benifits.html
+++ b/benifits.html
@@ -64,8 +64,8 @@
       </nav>
   </div>
         <h1>80% to 90% Loan Avalilable</h1>
-        <img src="./development pics/loan.jpeg" alt="">
-        <img src="./development pics/chart.jpeg" id="img" alt="">
+        <img src="./development pics/loan.jpeg" alt="" style="width: 100px;">
+        <img src="./development pics/chart.jpeg" id="img" alt="" style="width: 100px;">
         <a class="btn btn-outline-primary btn-lg" id="btn-lg" href="https://wa.me/+919552147036" target="_blank" role="button"><img src="./pics/whatsapp-svgrepo-com.svg" width="34px" alt="" > Contact Me</a>
        <!-- footer -->
    <footer class="row row-cols-5 py-5 my-5 border-top navbar-dark bg-dark">
