Location section completed

--- a/project.html
+++ b/project.html
@@ -158,7 +158,7 @@
       </div>
   
   </div>
-  <a class="btn btn-outline-primary btn-lg" id="btn-lg" href="https://wa.me/+919552147036" target="_blank" role="button"><img src="./pics/whatsapp-svgrepo-com.svg" width="34px" alt="" > Contact Me</a>
+  <a class="btn btn-outline-primary btn-lg" style="margin-left: 100px;" href="https://wa.me/+919552147036" target="_blank" role="button"><img src="./pics/whatsapp-svgrepo-com.svg" width="34px" alt="" > Contact Me</a>
 
   <!-- footer -->
       <footer class="py-5 my-5 border-top navbar-dark bg-dark">
